# cpp_labs

./: .gitignore  CMakeLists.txt  README.md  main.c  task6.c
cmake/: SetupTargetWarnings.cmake
labs/lab1/: task1.c  task13.c  task17.c  task2.c  task20.c  task21.c  task22.c  task23.c  task24.c  task3.c  task4.c  task5.c  task6.c  task7.c  task8.c  task9.c
labs/lab10/: task1.c  task2.c  task3.c  task4.c  task5.c  task6.c  task8.c
labs/lab11/: task1.c  task12.c  task2.c  task3.c  task4.c  task5.c  task9.c
labs/lab12/: task1.cpp  task14.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task9.cpp
labs/lab13/: task1.cpp  task16.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp
labs/lab14/: task1.cpp  task16.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp
labs/lab15/: task1.cpp  task12.cpp  task2.cpp  task3.cpp
labs/lab16/: task1.cpp  task2.cpp  task7.cpp
labs/lab17/: task1.cpp  task2.cpp  task9.cpp
labs/lab18/: task1.cpp  task2.cpp  task3.cpp  task5.cpp
labs/lab19/: task1.cpp  task19.cpp  task2.cpp  task3.cpp  task4.cpp
labs/lab2/: task1.c  task17.c  task2.c  task3.c  task4.c  task5.c  task6.c  task9.c
labs/lab20/: task1.cpp  task2.cpp  task3.cpp
labs/lab21/: task17.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp
labs/lab3/: task1.c  task13.c  task2.c  task23.c  task3.c  task4.c  task5.c  task6.c  task7.c  task7_2.c
labs/lab4/: task1.c  task10.c  task11.c  task12.c  task18.c  task2.c  task25.c  task27.c  task28.c  task29.c  task3.c  task30.c  task31.c  task4.c  task5.c  task6.c  task7.c  task8.c  task9.c
labs/lab5/: task1.c  task12.c  task16.c  task18.c  task19.c  task2.c  task20.c  task21.c  task22.c  task3.c  task4.c  task5.c  task6.c  task7.c  task8.c
labs/lab7/: task1.c  task10.c  task18.c  task19.c  task2.c  task20.c  task21.c  task3.c  task4.c  task5.c  task6.c  task8.c
labs/lab8/: task1.c  task16.c  task2.c  task3.c  task4.c  task5.c  task6.c  task7.c
labs/lab9/: task1.c  task2.c  task3.c  task4.c  task6.c  task9.c
